# gen-word-list-json-rs

./: Cargo.toml
src/: main.rs
